@@ -25,7 +25,7 @@ import uk.gov.justice.laa.portal.landingpage.model.PaginatedUsers;
 import uk.gov.justice.laa.portal.landingpage.model.ServicePrincipalModel;
 import uk.gov.justice.laa.portal.landingpage.model.UserModel;
 import uk.gov.justice.laa.portal.landingpage.model.UserRole;
-import uk.gov.justice.laa.portal.landingpage.service.CreateUserNotificationService;
+import uk.gov.justice.laa.portal.landingpage.service.NotificationService;
 import uk.gov.justice.laa.portal.landingpage.service.UserService;
 import uk.gov.justice.laa.portal.landingpage.utils.LogMonitoring;
 import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
@@ -57,13 +57,15 @@ class UserControllerTest {
     private UserService userService;
     @Mock
     private HttpSession session;
+
     @Mock
-    private CreateUserNotificationService createUserNotificationService;
+    private NotificationService notificationService;
+
     private Model model;
 
     @BeforeEach
     void setUp() {
-        userController = new UserController(userService, createUserNotificationService, new MapperConfig().modelMapper());
+        userController = new UserController(userService, new MapperConfig().modelMapper());
         model = new ExtendedModelMap();
     }
 
@@ -317,8 +319,8 @@ class UserControllerTest {
         assertThat(view).isEqualTo("add-user-apps");
         assertThat(model.getAttribute("apps")).isNotNull();
         List<AppViewModel> modeApps = (List<AppViewModel>) model.getAttribute("apps");
-        assertThat(modeApps.get(0).getId()).isEqualTo("1");
-        assertThat(modeApps.get(0).isSelected()).isTrue();
+        assertThat(modeApps.getFirst().getId()).isEqualTo("1");
+        assertThat(modeApps.getFirst().isSelected()).isTrue();
     }
 
     @Test
@@ -351,7 +353,7 @@ class UserControllerTest {
         assertThat(view).isEqualTo("add-user-roles");
         assertThat(model.getAttribute("roles")).isNotNull();
         List<AppRoleViewModel> sessionRoles = (List<AppRoleViewModel>) model.getAttribute("roles");
-        assertThat(sessionRoles.get(0).isSelected()).isFalse();
+        assertThat(sessionRoles.getFirst().isSelected()).isFalse();
         assertThat(sessionRoles.get(1).isSelected()).isTrue();
     }
 
@@ -406,7 +408,7 @@ class UserControllerTest {
         assertThat(model.getAttribute("roles")).isNotNull();
         Map<String, List<AppRoleViewModel>> cyaRoles = (Map<String, List<AppRoleViewModel>>) model.getAttribute("roles");
 
-        assertThat(cyaRoles.get("app1").get(0).getId()).isEqualTo("app1-dev");
+        assertThat(cyaRoles.get("app1").getFirst().getId()).isEqualTo("app1-dev");
         assertThat(model.getAttribute("user")).isNotNull();
         assertThat(model.getAttribute("officeData")).isNotNull();
     }
@@ -438,7 +440,7 @@ class UserControllerTest {
         session.setAttribute("user", user);
         List<String> roles = List.of("app1");
         session.setAttribute("roles", roles);
-        when(userService.createUser(any(), any(), any())).thenReturn(user);
+        when(userService.createUser(any(), any())).thenReturn(user);
         List<String> selectedApps = List.of("app1");
         session.setAttribute("apps", selectedApps);
         RedirectView view = userController.addUserCheckAnswers(session);
